# lyricstranslate.py

./: pyproject.toml
lyricstranslate/: __init__.py  api.py  beautiful_soup.py  client.py  constants.py  converter.py  inject.py  models.py
tests/: test_api.py  test_converter.py  test_static.py  utils.py
tests/testdata/: search_response.txt  song_html_response.txt
